src/test/deca/context/valid/created/miscellaneous/assign_dans_inst.deca
// Description :
//    On met des x = y partout
//
// Resultats :
//		Ok
	

{
int x;
int y = 3;
boolean a;
boolean b = false;
print(x =y);
if (a = b) {}
while(a = b) {}
}